[package]
name = "rustis"
version = "0.1.0"
keywords = ["redis", "database", "async", "cluster", "sentinel"]
categories = ["database", "asynchronous"]
description = "Redis async driver for Rust"
homepage = "https://github.com/dahomey-technologies/rustis"
repository = "https://github.com/dahomey-technologies/rustis"
documentation = "https://docs.rs/rustis"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

[features]
default = ["tokio-runtime"]
tokio-runtime = [
    "tokio/macros",
    "tokio/net",
    "tokio/rt",
    "tokio/io-util",
]
tokio-tls = [
    "tokio-rustls",
    "tls"
]
async-std-runtime = [
    "async-std",
    "async-std/attributes",
    "tokio-util/compat",
]
async-std-tls = [
    "async-tls",
    "tls"
]
pool = ["bb8"]
tls = ["rustls"]
redis-json = []
redis-search = []
redis-graph = []
redis-bloom = []
redis-time-series = []
redis-stack = [
    "redis-json",
    "redis-search",
    "redis-graph",
    "redis-bloom",
    "redis-time-series"
]

[dependencies]
async-std = { version = "1.13", features = ["attributes"], optional = true }
futures-util = { version = "0.3", features = ["sink"] }
futures-channel = { version = "0.3", features = ["sink"] }
bytes = "1.10"
tokio = { version = "1.43", features = ["time", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
atoi = "2.0"
itoa = "1.0"
fast-float = "0.2"
dtoa = "1.0"
smallvec = { version = "1.13", features = ["union", "serde"] }
bb8 = { version = "0.9", optional = true }
url = "2.5"
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
async-tls = { version = "0.13", optional = true }
log = "0.4"
crc16 = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.5"
memchr = "2.7"

[dev-dependencies]
serial_test = "3.2"
tokio = { version = "1.43", features = ["rt-multi-thread"] }
rand = "0.9"
env_logger = "0.11"
smallvec = { version = "1.13", features = ["serde"] }
criterion = "0.5"
redis = { version = "0.28", features = ["aio", "tokio-comp"] }
fred = "10.0"
axum = "0.8"
actix-web = "4.8"

[package.metadata.docs.rs]
features = ["tokio-runtime", "tokio-tls", "redis-stack", "pool"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "generic_api"
harness = false

[[bench]]
name = "native_api"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "multiplexer"
harness = false

[[example]]
name = "simple"

[[example]]
name = "cbor"

[[example]]
name = "axum_crud"
